force-app/main/default/objects/Dummy16__c/Dummy16__c.object-meta.xml
<CustomObject>
    <label>Dummy16</label>
    <nameField>
        <label>Dummy16 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy16</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>