force-app/main/default/objects/Dummy16__c/fields/FooBar050__c.field-meta.xml
<CustomField>
    <fullName>FooBar050__c</fullName>
    <label>FooBar050</label>
    <length>255</length>
    <type>Text</type>
</CustomField>