force-app/main/default/objects/Dummy16__c/fields/FooBar171__c.field-meta.xml
<CustomField>
    <fullName>FooBar171__c</fullName>
    <label>FooBar171</label>
    <length>255</length>
    <type>Text</type>
</CustomField>