force-app/main/default/objects/Dummy16__c/fields/FooBar174__c.field-meta.xml
<CustomField>
    <fullName>FooBar174__c</fullName>
    <label>FooBar174</label>
    <length>255</length>
    <type>Text</type>
</CustomField>